# dsrs-quickstart

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: update-dsrs.yml
scripts/: update-vendor.sh
src/: main.rs
tests/: integration_test.rs
