[package]
name = "dsrs_quickstart"
version = "0.1.0"
edition = "2021"

[dependencies]
# DSRs from vendored local path
dspy-rs = { path = "vendor/crates/dspy-rs" }

# Required dependencies
tokio = { version = "1", features = ["full"] }
anyhow = "1"
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
